recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
  return spiral((steps-1),(angle,lenght+3),increment)
               ^Spiral:4: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
  return spiral((steps-1),(angle,lenght+3),increment)
               ^Spiral:4: warning: enclosing method spiral has result type Unit: return value discarded
  return spiral((steps-1),(angle,lenght+3),increment)
  ^