recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  	avance(length);
  	gauche(angle);
  return spiral((steps-1),(angle,lenght+3),increment)
}
spiral(5,90,0,3)
